--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,4 +10,5 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm ci
       - run: npm run eslint:check
+      - run: npm run stylelint:check
       - run: npm run prettier:check
