--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -12,6 +12,7 @@
     "selector-class-pattern": "^([a-z][a-z0-9]*)(_[a-z0-9]+)*$",
     "order/properties-order": [],
     "declaration-empty-line-before": null,
+    "alpha-value-notation": "number",
     "plugin/rational-order": [
       true,
       {
